# MemoryPackageBuilder

./: .gitignore  ArrayStore.qml  CMakeLists.txt  CheckExportDialog.qml  EditExersizeDialog.qml  ExersizeModel.h  FramedRoot.qml  FramedSection.qml  ImageComposer.qml  ImageDownloader.cpp  ImageDownloader.h  ImageProcessing.qml  ImageProcessingWindow.qml  Main.qml  MultiSelectListView.qml  PartView.qml  README.md  Splitter.qml  ThreePanel.qml  ThreePanelSplitter.qml  TwoPaneSplitter.qml  TwoPanel.qml  URLComponentProcessing.qml  UebungenDialog.qml  appicon.rc  buildexercisepackage.cpp  buildexercisepackage.h  exersizeloader.cpp  exersizeloader.h  filehelper.cpp  filehelper.h  firstWindow.qml  licenceinfowiki.cpp  licenceinfowiki.h  main.cpp  packagemodel.cpp  packagemodel.h  packageparser.cpp  packageparser.h
buildsourcen/: beruehmte_bilder_1.csv  beruehmte_bilder_100.csv  beruehmte_bilder_25.csv  werder bremen_team_25_26.csv
exercisepackages/Bundeskanzler BRD/: package.xml
icons/: icons.qrc
